--- a/templates/question.html
+++ b/templates/question.html
@@ -1,1 +1,27 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>AskMate</title>
+</head>
+<body>
+<h1>Ask Mate</h1>
+<a href=""></a>
+<table>
+    <thead>
+        <tr>
+            {%  for head in header %}
+                <th>{{ ' '.join(head.split('_')).title() }}</th>
+            {%  endfor %}
+        </tr>
+         <tbody>
+                <tr>
+                {% for value in result %}
+                        <td>{{ value }}</td>
+                {% endfor %}
+                </tr>
+</tbody>
+    </thead>
+</table>
+</body>
+</html>
