--- a/templates/question.html
+++ b/templates/question.html
@@ -8,6 +8,7 @@
 <h1>Ask Mate</h1>
 <a href=""></a>
 <table>
+<h2>Question Number</h2>
     <thead>
         <tr>
             {%  for head in header %}
@@ -22,6 +23,12 @@
                 </tr>
 </tbody>
     </thead>
+</table>
+<table>
+<h3>Answers</h3>
+    <ol>
+
+    </ol>
 </table>
 </body>
 </html>
