display all the answers

--- a/templates/list.html
+++ b/templates/list.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>AskMate</title>
+<title>FastFox</title>
 </head>
 <body>
-<h1>Ask Mate</h1>
+<h1>FastFox</h1>
 <a href=""></a>
 <table>
     <thead>
