--- a/templates/question.html
+++ b/templates/question.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>AskMate</title>
+<title>FastFox</title>
 </head>
 <body>
-<h1>Ask Mate</h1>
+<h1>FastFox</h1>
 <a href="{{ url_for('list_questions') }}">Back to Main Page</a>
 <table>
 <h2>Question Number</h2>
@@ -25,7 +25,7 @@
     </thead>
 </table>
 <table>
-<h3>Answers</h3>
+<h2>Answers</h2>
     <ol>
         {% for answer in answer_list %}
             <li>{{ answer }}</li>
