ask a question task is completed

--- a/templates/list.html
+++ b/templates/list.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>FastFox</h1>
-<a href=""></a>
+<a href="{{ url_for('ask_question') }}">Ask a Question</a>
 <table>
     <thead>
         <tr>
