post an answer task

--- a/templates/question.html
+++ b/templates/question.html
@@ -32,5 +32,6 @@
         {% endfor %}
     </ol>
 </table>
+<a href="{{ url_for('post_answer', question_id=question_id)}}">Post an Answer</a>
 </body>
 </html>
