--- a/templates/new_answer.html
+++ b/templates/new_answer.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Post an Answer</h1>
-<form action="/question/<int:question_id>/new-answer" method="POST">
+<form action="/question/{{ question_id }}/new-answer" method="POST">
     <p>
       <label for="message">Message:</label><br>
         <textarea name="message" type="text" required></textarea>
