--- a/templates/question.html
+++ b/templates/question.html
@@ -8,7 +8,7 @@
 <h1>FastFox</h1>
 <a href="{{ url_for('list_questions') }}">Back to Main Page</a>
 <table>
-<h2>Question Number</h2>
+<h2>Question number {{ question_id }}</h2>
     <thead>
         <tr>
             {%  for head in header %}
