--- a/templates/ask.html
+++ b/templates/ask.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Ask a Question</h1>
-<form action="/list" method="POST">
+<form action="/add-question" method="POST">
     <p>
         <label for="title">Title:</label><br>
     <input name="title" type="text" required>
