Implemented the deleting method

--- a/templates/ask.html
+++ b/templates/ask.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Ask a Question</h1>
-<form action="/add-question" method="POST">
+<form action="/add-question" method="POST" enctype=multipart/form-data>
     <p>
         <label for="title">Title:</label><br>
     <input name="title" type="text" required>
@@ -16,6 +16,8 @@
         <textarea name="message" type="text" required></textarea>
     </p>
     <p>
+        <label for="image" >Upload an image of your choice:</label>
+        <input type="file" id="image" name="image" accept="image/*">
         <button type="submit">Submit question</button>
     </p>
 </form>
