--- a/templates/question.html
+++ b/templates/question.html
@@ -28,7 +28,7 @@
 <h2>Answers</h2>
     <ol>
         {% for answer in answer_list %}
-            <li>{{ answer }}</li>
+            <li>{{ answer["message"] }} <a href="{{ url_for('delete_answer', answer_id=answer["id"], question_id=question_id) }}">Delete Answer</a></li>
         {% endfor %}
     </ol>
 </table>
