--- a/templates/question.html
+++ b/templates/question.html
@@ -34,5 +34,6 @@
 </table>
 <a href="{{ url_for('post_answer', question_id=question_id)}}">Post an Answer</a>
 <a href="{{ url_for('delete_question', question_id=question_id) }}">Delete Question</a>
+<a href="{{ url_for('edit_question', question_id=question_id) }}">Edit Question</a>
 </body>
 </html>
