--- a/templates/question.html
+++ b/templates/question.html
@@ -14,6 +14,7 @@
             {%  for head in header %}
                 <th>{{ ' '.join(head.split('_')).title() }}</th>
             {%  endfor %}
+            <a href="{{ url_for('add_comment_to_question', question_id=question_id, answer_id=answer['id']) }}">Comment</a>
         </tr>
             <tbody>
                 <tr>
@@ -29,8 +30,10 @@
     <ol>
         {% for answer in answer_list %}
             <li>
-            {{ answer["message"] }} <a href="{{ url_for('delete_answer', answer_id=answer["id"], question_id=question_id) }}">Delete Answer</a>
-            <a href="{{ url_for('vote_up_answer',  question_id=question_id, answer_id=answer['id'])}}">▲</a> <a href="{{ url_for('vote_down_answer',  question_id=question_id, answer_id=answer['id'])}}">▼</a> ({{ answer["vote_number"] }})
+            {{ answer["message"] }} <a href="{{ url_for('delete_answer', answer_id=answer['id'], question_id=question_id) }}">Delete Answer</a>
+            <a href="{{ url_for('vote_up_answer',  question_id=question_id, answer_id=answer['id'])}}">▲</a>
+            <a href="{{ url_for('vote_down_answer',  question_id=question_id, answer_id=answer['id'])}}">▼</a> ({{ answer["vote_number"] }})
+            <a href="{{ url_for('add_comment_to_answer', question_id=question_id, answer_id=answer['id']) }}">Comment</a>
             </li>
         {% endfor %}
     </ol>
