bugfix (load questions)

--- a/templates/list.html
+++ b/templates/list.html
@@ -32,7 +32,7 @@
                     <td><a href="{{ url_for('display_question', id=question['id']) }}">{{ value }}</a></td>
                 {% elif key == 'image' %}
                     <td>
-                        <img src="{{ url_for('static', filename= 'cdcdcdcd2.jpg') }}" alt="uwu" height="100">
+                        <img src="{{ url_for('static', filename='no-image-icon-0.jpg') }}" alt="uwu" height="100">
                     </td>
                 {% else %}
                     <td>{{ value }}</td>
