--- a/templates/new_answer.html
+++ b/templates/new_answer.html
@@ -6,12 +6,14 @@
 </head>
 <body>
 <h1>Post an Answer</h1>
-<form action="/question/{{ question_id }}/new-answer" method="POST">
+<form action="/question/{{ question_id }}/new-answer" method="POST" enctype=multipart/form-data>
     <p>
       <label for="message">Message:</label><br>
         <textarea name="message" type="text" required></textarea>
     </p>
     <p>
+        <label for="image" >Upload an image of your choice:</label>
+        <input type="file" id="image" name="image" accept="image/*">
         <button type="submit">Post an Answer</button>
     </p>
 </form>
