delete_answer modifed (fetchone())

--- a/templates/question.html
+++ b/templates/question.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>FastFox</title>
+    <meta charset="UTF-8">
+    <title>FastFox</title>
 </head>
 <body>
 <h1>FastFox</h1>
@@ -10,42 +10,46 @@
 <table>
     <h2>Question number {{ question_id }}</h2>
     <thead>
-        <tr>
-            {%  for head in header %}
-                <th>{{ ' '.join(head.split('_')).title() }}</th>
-            {%  endfor %}
-            <a href="{{ url_for('add_comment_to_question', question_id=question_id) }}">Comment</a>
-        </tr>
-            <tbody>
-                <tr>
-                {% for value in result %}
-                    <td>{{ result[value] }}</td>
-                {% endfor %}
-                </tr>
-            </tbody>
-        <tbody>
-                <tr>
-                {% for comment in comments %}
-                    <td class="comment">{{ comment[message] }}</td>
-                {% endfor %}
-                </tr>
-        </tbody>
+    <tr>
+        {% for head in header %}
+            <th>{{ ' '.join(head.split('_')).title() }}</th>
+        {% endfor %}
+        <a href="{{ url_for('add_comment_to_question', question_id=question_id) }}">Comment</a>
+    </tr>
+    <tbody>
+    <tr>
+        {% for value in result %}
+            <td>{{ result[value] }}</td>
+        {% endfor %}
+    </tr>
+    </tbody>
     </thead>
 </table>
+<h2>Comments</h2>
+    <tbody>
+    <tr>
+        {% for comment in comments %}
+            <td class="comment">{{ comment[message] }}</td>
+        {% endfor %}
+    </tr>
+    </tbody>
 <table>
-<h2>Answers</h2>
+    <h2>Answers</h2>
     <ol>
         {% for answer in answer_list %}
             <li>
-            {{ answer["message"] }} <a href="{{ url_for('delete_answer', answer_id=answer['id'], question_id=question_id) }}">Delete Answer</a>
-            <a href="{{ url_for('vote_up_answer',  question_id=question_id, answer_id=answer['id'])}}">👍</a>
-            <a href="{{ url_for('vote_down_answer',  question_id=question_id, answer_id=answer['id'])}}">👎</a> ({{ answer["vote_number"] }})
-            <a href="{{ url_for('add_comment_to_answer', question_id=question_id, answer_id=answer['id']) }}">Comment</a>
+                {{ answer["message"] }} <a
+                    href="{{ url_for('delete_answer', answer_id=answer['id'], question_id=question_id) }}">Delete
+                Answer</a>
+                <a href="{{ url_for('vote_up_answer',  question_id=question_id, answer_id=answer['id']) }}">👍</a>
+                <a href="{{ url_for('vote_down_answer',  question_id=question_id, answer_id=answer['id']) }}">👎</a>
+                ({{ answer["vote_number"] }})
+                <a href="{{ url_for('add_comment_to_answer', question_id=question_id, answer_id=answer['id']) }}">Comment</a>
             </li>
         {% endfor %}
     </ol>
 </table>
-<a href="{{ url_for('post_answer', question_id=question_id)}}">Post an Answer</a>
+<a href="{{ url_for('post_answer', question_id=question_id) }}">Post an Answer</a>
 <a href="{{ url_for('delete_question', question_id=question_id) }}">Delete Question</a>
 <a href="{{ url_for('edit_question', question_id=question_id) }}">Edit Question</a>
 </body>
