--- a/templates/ask.html
+++ b/templates/ask.html
@@ -21,5 +21,6 @@
         <button type="submit">Submit question</button>
     </p>
 </form>
+<a href="{{ url_for('list_questions') }}">Back to Main Page</a>
 </body>
 </html>
